--- a/index.html
+++ b/index.html
@@ -16,50 +16,75 @@
 
     <main class="container flex-center">
       <div class="wrapper">
-      <section class="one bg-primary-one">
-        <header>
-          <h1 class="fw-600 fs-500 fc-secondary-one">Daniel Clifford</h1>
-          <h2 class="fw-500 fs-400 fc-secondary-one-op-50">Verified Graduate</h2>
-        </header>
-        <h3 class="fw-600 fs-700 fc-secondary-one">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h3>
-        <p class="fw-500 fs-400 fc-secondary-one-op-70">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter.  The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
-      </section>
+        <section class="one bg-primary-one">
+          <header>
+            <figure>
+              <img class="profile-img br-light-purple" src="assets/images/image-daniel.jpg" alt="Profile image of daniel">
+            </figure>
+            <div>
+              <h1 class="fw-600 fs-500 fc-secondary-one">Daniel Clifford</h1>
+              <h2 class="fw-500 fs-400 fc-secondary-one-op-50">Verified Graduate</h2>
+            </div>
+          </header>
+          <h3 class="fw-600 fs-700 fc-secondary-one">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h3>
+          <p class="fw-500 fs-400 fc-secondary-one-op-70">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter.  The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
+        </section>
 
-      <section class="two bg-primary-two">
-        <header>
-          <h1 class="fw-600 fs-500 fc-secondary-one">Jonathan Walters</h1>
-          <h2 class="fw-500 fs-400 fc-secondary-one-op-50">Verified Graduate</h2>
-        </header>
-        <h3 class="fw-600 fs-700 fc-secondary-one">The team was very supportive and kept me motivated</h3>
-        <p class="fw-500 fs-400 fc-secondary-one-op-70">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
-      </section>
+        <section class="two bg-primary-two">
+          <header>
+            <figure>
+            <img class="profile-img br-white-gray" src="assets/images/image-jonathan.jpg" alt="Profile image of Jonathan">
+            </figure>
+            <div>
+              <h1 class="fw-600 fs-500 fc-secondary-one">Jonathan Walters</h1>
+              <h2 class="fw-500 fs-400 fc-secondary-one-op-50">Verified Graduate</h2>
+            </div>
+          </header>
+          <h3 class="fw-600 fs-700 fc-secondary-one">The team was very supportive and kept me motivated</h3>
+          <p class="fw-500 fs-400 fc-secondary-one-op-70">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
+        </section>
 
-      <section class="three bg-primary-four">
-        <header>
-          <h1 class="fw-600 fs-500 fc-secondary-two">Jeanette Harmon</h1>
-          <h2 class="fw-500 fs-400 fc-secondary-two-op-50">Verified Graduate</h2>
-        </header>
-        <h3 class="fw-600 fs-700 fc-secondary-two">An overall wonderful and rewarding experience</h3>
-        <p class="fw-500 fs-400 fc-secondary-two-op-70">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
-      </section>
+        <section class="three bg-primary-four">
+          <header>
+            <figure>
+              <img class="profile-img br-dark-gray" src="assets/images/image-jeanette.jpg" alt="Profile image of Jeanette">
+            </figure>
+            <div>
+              <h1 class="fw-600 fs-500 fc-secondary-two">Jeanette Harmon</h1>
+              <h2 class="fw-500 fs-400 fc-secondary-two-op-50">Verified Graduate</h2>
+            </div>
+          </header>
+          <h3 class="fw-600 fs-700 fc-secondary-two">An overall wonderful and rewarding experience</h3>
+          <p class="fw-500 fs-400 fc-secondary-two-op-70">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
+        </section>
 
-      <section class="four bg-primary-three">
-        <header>
-          <h1 class="fw-600 fs-500 fc-secondary-one">Patrick Abrams</h1>
-          <h2 class="fw-500 fs-400 fc-secondary-one-op-50">Verified Graduate</h2>
-        </header>
-        <h3 class="fw-600 fs-700 fc-secondary-one">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h3>
-        <p class="fw-500 fs-400 fc-secondary-one-op-70">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
-      </section>
+        <section class="four bg-primary-three">
+          <header>
+            <figure>
+              <img class="profile-img br-light-purple" src="assets/images/image-patrick.jpg" alt="Profile image of patric">
+            </figure>
+            <div>
+              <h1 class="fw-600 fs-500 fc-secondary-one">Patrick Abrams</h1>
+              <h2 class="fw-500 fs-400 fc-secondary-one-op-50">Verified Graduate</h2>
+            </div>
+          </header>
+          <h3 class="fw-600 fs-700 fc-secondary-one">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h3>
+          <p class="fw-500 fs-400 fc-secondary-one-op-70">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
+        </section>
 
-      <section class="five bg-primary-four">
-        <header>
-          <h1 class="fw-600 fs-500 fc-secondary-two">Kira Whittle</h1>
-          <h2 class="fw-500 fs-400 fc-secondary-two-op-50">Verified Graduate</h2>
-        </header>
-        <h3 class="fw-600 fs-700 fc-secondary-two">Such a life-changing experience. Highly recommended!</h3>
-        <p class="fw-500 fs-400 fc-secondary-two-op-70">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers.  100% recommend! ”</p>
-      </section>
+        <section class="five bg-primary-four">
+          <header>
+            <figure>
+              <img class="profile-img br-dark-gray" src="assets/images/image-kira.jpg" alt="Profile image of Kira">
+            </figure>
+            <div>
+              <h1 class="fw-600 fs-500 fc-secondary-two">Kira Whittle</h1>
+              <h2 class="fw-500 fs-400 fc-secondary-two-op-50">Verified Graduate</h2>
+            </div>
+          </header>
+          <h3 class="fw-600 fs-700 fc-secondary-two">Such a life-changing experience. Highly recommended!</h3>
+          <p class="fw-500 fs-400 fc-secondary-two-op-70">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers.  100% recommend! ”</p>
+        </section>
       </div>
     </main>
 
