added quote image

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main class="container flex-center">
       <div class="wrapper">
         <section class="one bg-primary-one">
+          <img class="quote-img" src="assets/images/bg-pattern-quotation.svg" alt="">
           <header>
             <figure>
               <img class="profile-img br-light-purple" src="assets/images/image-daniel.jpg" alt="Profile image of daniel">
@@ -26,7 +27,7 @@
               <h2 class="fw-500 fs-400 fc-secondary-one-op-50">Verified Graduate</h2>
             </div>
           </header>
-          <h3 class="fw-600 fs-700 fc-secondary-one">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h3>
+          <h3 class="quote-text fw-600 fs-700 fc-secondary-one">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h3>
           <p class="fw-500 fs-400 fc-secondary-one-op-70">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter.  The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
         </section>
 
